Moving onto creating the matching algorithm

--- a/p2pRideshare.csproj
+++ b/p2pRideshare.csproj
@@ -15,4 +15,12 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\VerifySignUp.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\VerifySignUp.cshtml" />
+  </ItemGroup>
+
 </Project>
