Configuration of the passenger ride request module

--- a/p2pRideshare.csproj
+++ b/p2pRideshare.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,17 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Pages\RideMatches.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\UserProfile.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\VerifySignUp.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\UserProfile.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\RideMatches.cshtml" />
   </ItemGroup>
 
 </Project>
