--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,13 +1,4 @@
 {
-
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:6428/",
-      "sslPort": 0
-    }
-  },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -16,17 +7,22 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-
     "p2pRideshare": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5137",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-
-
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5137"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:6428/",
+      "sslPort": 0
     }
   }
 }
